--- a/style.css
+++ b/style.css
@@ -7,25 +7,6 @@ background-position: bottom right;
 background-size: 60%, 120%;
 }
 
-  a:link {
-    color: beige;
-    text-decoration: none;
-  }
-  
-  a:visited {
-    color: beige;
-    text-decoration: none;
-  }
-  
-  a:hover {
-    color:beige;
-    text-decoration: none;
-  }
-  
-  a:active {
-    color: beige;
-    text-decoration: none;
-  }
 
 div.wrapper section.about-me header#about-me-header {
     font-size: 50px;
@@ -104,6 +85,8 @@ div.wrapper footer#footer {
 
 span.link {
     cursor: pointer;
+    text-decoration: underline
+    ;
 }
 
 .displayMe {
